force-app/main/default/objects/Expense_Line_Item__c/Expense_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Represents individual line items of an expense. Each line item details specific products or services purchased as part of an expense. This object is linked to the Expense object through a master-detail relationship, allowing for detailed tracking and aggregation of expenses at a granular level. It includes fields for item descriptions, quantities, unit prices, and calculated total amounts.</description>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>EXP-LI-{00000000}</displayFormat>
        <label>Expense Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>