force-app/main/default/objects/Expense_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the item or service purchased. This field is used to provide more details about each expense incurred.</description>
    <inlineHelpText>Describes the item or service purchased. This field is used to provide more details about each expense incurred.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>