force-app/main/default/objects/Expense_Line_Item__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <description>A master-detail relationship linking each line item to its parent Expense. This relationship allows for cascading deletes and roll-up summary fields, tying the line item directly to the overall expense record</description>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>