force-app/main/default/objects/Expense_Line_Item__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <description>Calculates the total cost for the line item, derived from Quantity__c multiplied by Unit_Price__c. This formula field ensures that the line total is always up to date based on quantity and unit price.</description>
    <formula>Quantity__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the total cost for the line item, derived from Quantity multiplied by Unit Price. This formula field ensures that the line total is always up to date based on quantity and unit price.</inlineHelpText>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>