force-app/main/default/objects/Expense_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The quantity of the item purchased. This field is used in conjunction with Unit_Price__c to calculate the total line amount.</description>
    <inlineHelpText>The quantity of the item purchased. This field is used in conjunction with Unit_Price__c to calculate the total line amount.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>