force-app/main/default/objects/Expense_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>The price of a single unit of the item. This field is critical for calculating the total cost of the line item based on the quantity purchased.</description>
    <inlineHelpText>The price of a single unit of the item. This field is critical for calculating the total cost of the line item based on the quantity purchased.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>